add mapper to User Management
